fix scrollbar

--- a/src/ui/Components/ObjectEditor/ObjectEditor.scss
+++ b/src/ui/Components/ObjectEditor/ObjectEditor.scss
@@ -2,6 +2,7 @@
     display: flex;
     flex-direction: column;
     padding: 0 1em;
+    overflow: auto;
     height: 100%;
 }
 .ObjectEditorButtons {
